初始化工具文章

--- a/后端/07：并发基础篇-不要用多线程.md
+++ b/后端/07：并发基础篇-不要用多线程.md
@@ -1,3 +1,11 @@
+---
+date: 2024-03-15
+title: 并发基础篇-不要用多线程：线程池的正确使用姿势
+keywords: [ThreadPoolExecutor, 线程池配置, Java并发编程, 线程池参数, 拒绝策略, 任务队列, 线程工厂]
+tags: [Java多线程, 线程池, 并发编程, ThreadPoolExecutor, 性能优化]
+summary: 深入讲解了Java多线程编程中线程池的使用，包括线程池的创建、参数配置、执行流程等内容，并提供了企业级应用中的最佳实践建议。
+author: 柳树下的程序员
+---
 并发基础篇-不要用多线程
 
 多线程编程在企业开发中十分重要，用于可以提高应用程序的响应速度和吞吐量。一般企业开发不会直接创建线程来处理并发任务，而是用线程池来管理线程。一般而言，创建完线程池不会进行线程池的销毁
